@@ -156,23 +156,8 @@ int add_job_to_queue( gearman_client_st *client, gm_server_t * server_list[GM_LI
     gm_log( GM_LOG_TRACE, "add_job_to_queue(%s, %s, %d, %d, %d, %d)\n", queue, uniq, priority, retries, transport_mode, send_now );
     gm_log( GM_LOG_TRACE, "%d --->%s<---\n", strlen(data), data );
 
-    crypted_data = gm_malloc(GM_BUFFERSIZE);
     size = mod_gm_encrypt(&crypted_data, data, transport_mode);
     gm_log( GM_LOG_TRACE, "%d +++>\n%s\n<+++\n", size, crypted_data );
-
-#ifdef GM_DEBUG
-    /* verify decrypted string is equal to the original */
-    char * test;
-    test = gm_malloc(GM_BUFFERSIZE);
-    mod_gm_decrypt(&test, crypted_data, transport_mode);
-    gm_log( GM_LOG_TRACE, "%d ===>\n%s\n<===\n", size, test );
-    if(strcmp(test, data)) {
-        gm_log( GM_LOG_ERROR, "%d --->%s<---\n", strlen(data), data );
-        gm_log( GM_LOG_ERROR, "%d ===>\n%s\n<===\n", size, test );
-        fprintf(stderr, "encrypted string does not match\n");
-        exit(EXIT_FAILURE);
-    }
-#endif
 
     if( priority == GM_JOB_PRIO_LOW ) {
         task = gearman_client_add_task_low_background( client, NULL, NULL, queue, uniq, ( void * )crypted_data, ( size_t )size, &ret1 );
@@ -233,7 +218,6 @@ int add_job_to_queue( gearman_client_st *client, gm_server_t * server_list[GM_LI
         /* no more retries... */
         else {
             gm_log( GM_LOG_TRACE, "add_job_to_queue() finished with errors: %d %d\n", ret1, ret2 );
-            free(crypted_data);
             if(free_uniq)
                 free(uniq);
             return GM_ERROR;
